@@ -319,6 +319,7 @@ disable http2 by default and add config menu option
 fix videoplayer focus
 fix tvtunes
 fix music update sync
+fix fanart artwork
 
 
 6.0.13 (beta)
